fixed search staying open when using toolbar and fixed buttons staying green on mobile

--- a/ui2022/src/app/util/styles/utils.scss
+++ b/ui2022/src/app/util/styles/utils.scss
@@ -106,6 +106,11 @@ video {
     background: var(--dark-brown);
     color: var(--background);
   }
+  &:focus {
+    border: 1px solid var(--dark-brown) !important;
+    background: var(--dark-brown)!important;
+    color: var(--background)!important;
+  }
   &:hover {
     border: 1px solid var(--green) !important;
     background: var(--green);
